# roborally

./: Makefile  README.md  architecture.MD  main.py  pyproject.toml
game/: direction.py
game/tests/: test_direction.py
roborally/game/: direction.py
roborally/game/board/: board.py  calculate_move.py  coord.py
roborally/game/board/elements/: base.py  conveyors.py  factory.py  pushers.py  repair.py  rotators.py
roborally/game/commands/: base.py  death.py  movement.py
roborally/game/tests/: conftest.py  test_direction.py  test_hole.py  test_negative_movement.py  test_wall_validation.py
roborally/game/tests/calculate_move/: test_basic_movement.py  test_hole.py  test_move_with_walls.py
roborally/game/tests/data/: six_by_six_with_walls_board.json  three_by_three_empty_board.json  three_by_three_with_hole_board.json
roborally/game/tests/data/wall_validation/: invalid_walls.json  valid_walls.json  valid_walls_outside.json  valid_walls_with_hole.json
