[project]
name = "Roborally"
version = "0.1.0"
description = "Play by 'mail' version of Roborally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 120
fix = false

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
ignore = ["TC001", "TC002", "TC003", "TC006"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
